@@ -1,0 +1,12 @@
+package com.esofthead.mycollab.mobile.module.project.view;
+
+import com.esofthead.mycollab.vaadin.mvp.PageView;
+
+/**
+ *
+ * @author MyCollab Ltd.
+ * @since 4.4.0
+ *
+ */
+public interface ProjectView extends PageView {
+}
