@@ -1,0 +1,21 @@
+package com.esofthead.mycollab.mobile.module.project.view;
+
+import com.esofthead.mycollab.mobile.mvp.AbstractPresenter;
+import com.esofthead.mycollab.vaadin.mvp.ScreenData;
+import com.vaadin.ui.ComponentContainer;
+
+/**
+ * @author MyCollab Ltd.
+ * @since 4.4.0
+ */
+public class ProjectViewPresenter extends AbstractPresenter<ProjectView> {
+
+    public ProjectViewPresenter() {
+        super(ProjectView.class);
+    }
+
+    @Override
+    protected void onGo(ComponentContainer container, ScreenData<?> data) {
+
+    }
+}
